# glpaper

./: CMakeLists.txt
src/: main.cpp  scaling.cpp  wallpaper.cpp  wallpaper.hpp
